--- a/index.html
+++ b/index.html
@@ -1,56 +1,116 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title> Build a Survey Form</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <h1 id="title"></h1>
-    <p id="deescription">freeCodeCamp Survey Form</p>
-    <p><i>Thank you for taking the time to help us improve the platform</i></p>
-    <hr>
-    <div>
-     <form id="survey-form" class="survey-form">
-        <label id="name-label" for="name">Name<input id="name" type="text" placeholder="Enter Your Name" required></label>
-        <label id="email-label" for="email">Email<input id="email" placeholder="Enter Your Email" required></label>
-        <label id="number-label" for="number">Age(optional)<input id="number" min="15" max="40" placeholder="Age" required></label>
-        <label>Which option describes your current role?
-            <select id="dropdown">
-                <option value="">Select an option</option>
-                <option value="1">Student</option>
-                <option value="2">Full Time Job</option>
-                <option value="3">Full Time Learner</option>
-                <option value="4">Prefer not to say</option>
-                <option>Other</option>
-            </select>
-         </label>
-        <div>
-         Would you recommend freecodecamp to a friend?
-         <label><input value="definitely" type="radio" name="recommend" class="input-radio" required/> Definitely</label>
-         <label><input value="maybe" type="radio"  name="recommend" class="input-radio" /> Maybe</label>
-         <label><input value="not-sure" type="radio"  name="recommend" class="input-radio" /> Not sure</label>
+    <title>Survey Form</title>
+</head>
+<body>
+   <h1 id="title">freeCodeCamp Survey Form</h1>
+   <p id="description">Thank you for taking the time to help us improve the platform</p>
+   <form action="" id="survey-form">
+        <div class="form-div">
+            <label id="name-label">Name</label>
+            <input type="text" id="name" name="name" placeholder="Enter your name" required>
         </div>
-       <div>
-         What would you like to see improved (Check all that apply)
-         <label><input  value="front-end-projects" type="checkbox" class="input-checkbox">Front-end Projects</label>
-         <label><input  value="back-end-projects" type="checkbox" class="input-checkbox">Back-end Projects</label>
-         <label><input  value="data-visualization" type="checkbox" class="input-checkbox">Data Visualization</label>
-         <label><input  value="challenges" type="checkbox" class="input-checkbox">Challenges</label>
-         <label><input  value="open-source-community" type="checkbox" class="input-checkbox">Open Source Community</label>
-         <label><input  value="gitter-help-rooms" type="checkbox" class="input-checkbox">Gitter help rooms</label>
-         <label><input  value="videos" type="checkbox" class="input-checkbox">Videos</label>
-         <label><input  value="city-meetups" type="checkbox" class="input-checkbox">City Meetups</label>
-         <label><input  value="wiki" type="checkbox" class="input-checkbox">Wiki</label>
-         <label><input  value="forum" type="checkbox" class="input-checkbox">Forum</label>
-         <label><input  value="additional-courses" type="checkbox" class="input-checkbox">Additional Courses</label>
-      </div>
-       <div>
-         <label>Any comments or suggestions?
-          <textarea id="comment" rows="3" cols="30" placeholder="Enter your comment here..."></textarea>
-         </label>
-       </div>
-        <button id="submit" class="submit-button" type="submit">Submit</button>
-     </form>
-    </div>
-  </body>
+        <div class="form-div">
+            <label id="email-label">Email</label>
+            <input type="email" id="email" name="email" placeholder="Enter your Email" required></label>
+        </div>
+        <div class="form-div">
+            <label id="number-label">Age (optional) </label>
+            <input type="number" id="number" name="age" placeholder="Age" min="1" max="120"></label>
+        </div>
+        <div class="form-div">
+            <label id="dropdown-label-role">Which option describes your current role?</label>
+                <select id="dropdown" name="dropdown-role">
+                    <option value="">Select current role</option>
+                    <option value="1">Student</option>
+                    <option value="2">Full Time Job</option>
+                    <option value="3">Full Time Learner</option>
+                    <option value="4">Prefer not to say</option>
+                    <option>Other</option>
+                </select>
+        </div>
+        <div class="form-div">
+            <label id="label-radio">Would you recommend freeCodeCamp to a friend?</label>
+        </div>
+        <div class="form-radio">
+            <label id="definitely"><input value="definitely" type="radio" class="inline" name="recommend" required/> Definitely</label>
+        </div>
+        <div class="form-radio">
+            <label id="maybe"><input value="maybe" type="radio" class="inline" name="recommend"/> Maybe</label>
+        </div>
+        <div class="form-radio">
+            <label id="not-sure"><input value="not-sure" type="radio" class="inline" name="recommend"/> Not sure</label>
+        </div>
+        <div class="form-div">
+            <label id="dropdown-label-feature">Which option describes your current role?</label>
+                <select id="dropdown-feature" name="dropdown-feature">
+                    <option value="">Select an option</option>
+                    <option value="1">Challenges</option>
+                    <option value="2">Projects</option>
+                    <option value="3">Community</option>
+                    <option value="4">Open Source</option>
+                </select>
+        </div>
+        <div class="form-div">
+            <label id="label-checkbox">What would you like to see improved? (Check all that apply)</label>
+        </div>
+        <div class="div-checkbox">
+            <input type="checkbox" name="improvement" value="1">
+            <label>Front-end-projects</label>
+        </div>
+        <div class="div-checkbox">
+            <input type="checkbox" name="improvement" value="2">
+            <label>Back-end-projects</label>
+        </div>
+        <div class="div-checkbox">
+            <input type="checkbox" name="improvement" value="3">
+            <label>Data Visualization</label>
+        </div>
+        <div class="div-checkbox">
+            <input type="checkbox" name="improvement" value="4">
+            <label>Challenges</label>
+        </div>
+        <div class="div-checkbox">
+            <input type="checkbox" name="improvement" value="5">
+            <label>Open-Source-Community</label>
+        </div>
+        <div class="div-checkbox">
+            <input type="checkbox" name="improvement" value="6">
+            <label>Gitter-help-rooms</label>
+        </div>
+        <div class="div-checkbox">
+            <input type="checkbox" name="improvement" value="7">
+            <label>Videos</label>
+        </div>
+        <div class="div-checkbox">
+            <input type="checkbox" name="improvement" value="8">
+            <label>City Meetups</label>
+        </div>
+        <div class="div-checkbox">
+            <input type="checkbox" name="improvement" value="9">
+            <label>Wiki</label>
+        </div>
+        <div class="div-checkbox">
+            <input type="checkbox" name="improvement" value="10">
+            <label>Forum</label>
+        </div>
+        <div class="div-checkbox">
+            <input type="checkbox" name="improvement" value="11">
+            <label>Additional-Courses</label>
+        </div>
+        <br>
+        <div class="form-div">
+            <label id="label-textarea">Any comments or suggestions?</label>
+            <textarea name="suggestions?" placeholder="Enter your comment here..."></textarea>
+        </div>
+        <div class="form-div">
+            <input id="submit" type="submit" value="Submit">
+        </div>
+   </form>
+</body>
 </html>
